--- a/src/pages/contacto.html
+++ b/src/pages/contacto.html
@@ -77,7 +77,7 @@
                 </select>
                 <hr>
                 <label for="Biografia"> Biografia</label>
-                <textarea name="Biografia" id=""></textarea>
+                <textarea name="Biografia" id="" required></textarea>
                 <hr>
                 <button type="submit">Enviar</button>
                 <button type="reset">Limpiar</button>
